# django-shared-property

./: .gitignore  .pre-commit-config.yaml  .tool-versions  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_test.txt  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: bandit.yml  codeql-analysis.yml  django.yml  python-package.yml
docs/: Makefile  conf.py  django_shared_property.rst  index.rst  installation.rst  make.bat  modules.rst  usage.rst
src/django_shared_property/: __init__.py  decorator.py  expressions.py  parser.py
tests/: admin.py  models.py  settings.py  test_django_shared_property.py  urls.py
tests/tests/: _test_lookup_expression.py  test_abstract.py  test_admin.py  test_coerce.py  test_convert_value.py  test_fetch.py  test_joined_models.py  test_json_field.py  test_lookup_expression.py  test_object_creation.py  test_register.py  test_setter.py  test_simplest_expression.py  test_subquery.py
