[tool.poetry]
name = "Django Shared Property"
version = "0.1.0"
description = "Properties that are both ORM expressions and python code."
authors = ["Matthew Schinckel <matt@schinckel.net>"]
license = "MIT license"

readme = "README.rst"

repository = "https://github.com/schinckel/django-shared-property"

homepage = "https://django-shared-property.readthedocs.io"


packages = [
    { include = "django_shared_property", from = "src"},
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
[tool.poetry.dependencies]
# List project dependencies here

[tool.poetry.dev-dependencies]
bump2version = "^0.5.0"
pip = "^18.1"
wheel = "^0.32.1"
watchdog = "^0.9.0"
flake8 = "^3.5.0"
tox = "^3.5.2"
coverage = "^4.5.1"
Sphinx = "^1.8.1"
twine = "^1.12.1"

pytest = "^3.8.2"
pytest-runner = "^4.2"
pytest-cov = "^2.6.0"
setuptools = "^40.5.0"
rstcheck = "^3.3.1"
ptpython = "^2.0.4"
