[bumpversion]
current_version = 0.2.1
commit = True
tag = True

[metadata]
description-file = README.rst

[bumpversion:file:pyproject.toml]
search = version = "{current_version}"
replace = version = "{new_version}"

[bumpversion:file:src/django_shared_property/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max_line_length = 119

[isort]
line_length = 119
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true

[black]
line-length = 119
